--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "next": "^9.2.1",
     "react": "^16.12.0",
+    "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
