--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "date-fns": "^2.9.0",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-day-picker": "^7.4.0",
