--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.19.2",
     "date-fns": "^2.9.0",
+    "easy-peasy": "^3.3.0",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-day-picker": "^7.4.0",
