--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.2",
+    "bcrypt": "^3.0.8",
     "date-fns": "^2.9.0",
     "easy-peasy": "^3.3.0",
     "next": "^9.2.1",
+    "pg": "^7.18.1",
     "react": "^16.12.0",
     "react-day-picker": "^7.4.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "sequelize": "^5.21.4"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
