--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "nodemon server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +15,15 @@
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.2",
     "bcrypt": "^3.0.8",
+    "connect-session-sequelize": "^6.1.1",
     "date-fns": "^2.9.0",
     "easy-peasy": "^3.3.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "next": "^9.2.1",
+    "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^7.18.1",
     "react": "^16.12.0",
     "react-day-picker": "^7.4.0",
