--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.19.2",
     "bcrypt": "^3.0.8",
+    "body-parser": "^1.19.0",
     "connect-session-sequelize": "^6.1.1",
     "date-fns": "^2.9.0",
     "easy-peasy": "^3.3.0",
