--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.19.0",
     "connect-session-sequelize": "^6.1.1",
     "date-fns": "^2.9.0",
+    "dotenv": "^8.2.0",
     "easy-peasy": "^3.3.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
@@ -30,7 +31,8 @@
     "react": "^16.12.0",
     "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
-    "sequelize": "^5.21.4"
+    "sequelize": "^5.21.4",
+    "stripe": "^8.17.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
