--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "easy-peasy": "^3.3.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "express-session": "^1.17.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.1",
@@ -28,6 +29,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^7.18.1",
+    "randomstring": "^1.1.5",
     "react": "^16.12.0",
     "react-day-picker": "^7.4.0",
     "react-dom": "^16.12.0",
