--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "next": "^9.2.1",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^7.18.1",
     "randomstring": "^1.1.5",
     "react": "^16.12.0",
